examples/test/testpolicy9073.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9073
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key18: value8
      key10: value44
      key11: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value48
          key46: value41
          key36: value19
      podSelector:
        matchLabels:
          key10: value20
          key41: value29
          key49: value30
